updated mission links

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <header>Chelsea Saunders: WDD 131 Portfolio</header>
     <main>
         <a href="url">https://chelsea-saunders.github.io/wdd131/</a>
-        <a href="week1"></a>
-        <a href="week2"></a>
+        <a href="week1/mission/index.html"></a>
+        <a href="week2/mission/index.html"></a>
     </main>
     <footer></footer>
 </body>
 </html>
+
+<!-- https://chelsea-saunders.github.io/wdd131/ -->
