--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
     <link rel="stylesheet" href="styles.css/">
 </head>
 <body>
-    <header>Chelsea Saunders: WDD 131 Portfolio</header>
-    <main>
-        <a href="url">https://chelsea-saunders.github.io/wdd131/</a>
-        <a href="week1/mission/index.html"></a>
-        <a href="week2/mission/index.html"></a>
-    </main>
+    <h1>Chelsea Saunders: WDD 131 Portfolio</h1>
+    <nav>
+        <a href="week1/mission/index.html">Week 1</a>
+        <a href="week2/mission/index.html">Week 2</a>
+    </nav>
     <footer></footer>
 </body>
 </html>
