--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <nav>
         <a href="week1/mission/index.html">Week 1</a>
         <a href="week2/mission/index.html">Week 2</a>
+        <a href="week3/coolpics/index.html">Cool Pics</a>
     </nav>
     <footer></footer>
 </body>
