updated coolpics css

--- a/week3/coolpics/index.html
+++ b/week3/coolpics/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,42 +15,44 @@
     <header>
         <h1>Cool Pics 📷</h1>
         <button id="menu">Menu</button>
-        <nav class="header-links">
-            <a href="">Home</a>
-            <a href="">People</a>
-            <a href="">Places</a>
-            <a href="">About</a>
-            <a href="">Contact</a>
+        <nav>
+            <ul class="dropdown">
+                <li><a href="">Home</a></li>
+                <li><a href="">People</a></li>
+                <li><a href="">Places</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <main>
         <h2>Current Work</h2>
         <section class="gallery">
-            <figure class="1">
+            <figure>
                 <img src="images/norris-sm.jpeg" alt="picture">
             </figure>
-            <figure class="2">
+            <figure>
                 <img src="images/norris-sm.jpeg" alt="picture">
             </figure>
-            <figure class="3">
+            <figure>
                 <img src="images/norris-sm.jpeg" alt="picture">
             </figure>
-            <figure class="4">
+            <figure>
                 <img src="images/norris-sm.jpeg" alt="picture">
             </figure>
-            <figure class="5">
+            <figure>
                 <img src="images/norris-sm.jpeg" alt="picture">
             </figure>
-            <figure class="6">
+            <figure>
                 <img src="images/norris-sm.jpeg" alt="picture">
             </figure>
-            <figure class="7">
+            <figure>
                 <img src="images/norris-sm.jpeg" alt="picture">
             </figure>
-            <figure class="8">
+            <figure>
                 <img src="images/norris-sm.jpeg" alt="picture">
             </figure>
-            <figure class="9">
+            <figure>
                 <img src="images/norris-sm.jpeg" alt="picture">
             </figure>
         </section>
