--- a/week2/dom-basics.html
+++ b/week2/dom-basics.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Week 2</title>
-    <!-- <script src="dom-basics.js"></script> -->
+    <script src="dom-basics.js" defer></script>
   </head>
   <body>
     <h1>Week 2</h1>
@@ -22,6 +22,6 @@
         <p class="green">This is a paragraph with an class</p>
       </div>
     </section>
-    <script src="dom-basics.js" defer></script>
+    <!-- <script src="dom-basics.js" defer></scxript> -->
   </body>
 </html>
