updated main html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <a href="week1/mission/index.html">Week 1</a>
         <a href="week2/mission/index.html">Week 2</a>
         <a href="week3/coolpics/index.html">Cool Pics</a>
+        <a href="./week5/blog/index.html">Blog</a>
     </nav>
     <footer></footer>
 </body>
