updated coolpics js, css and html...mid size screen dropdown still doesn't work, modal pops up initially but now closes

--- a/week4/coolpics/index.html
+++ b/week4/coolpics/index.html
@@ -12,19 +12,10 @@
     <script src="coolpics.js" defer></script>
 </head>
 <body>
-    <!-- <div class="viewer">
-        <button class="close-viewer">X</button>
-        <img src="images/norris-full.jpeg" alt="Large Image">
-    </div> -->
-    <!-- open modal -->
-    <!-- <button id="open-viewer">X</button> -->
-    <!-- the modal -->
-    <!-- <div id="viewer" class="x-button"> -->
-        <!-- modal content -->
-        <!-- <div class="close-viewer">
-            <span class="close">X</span>
-            <img id="img" src="images/norris-full.jpeg" alt="Large Image">
-        </div> -->
+    <div id="viewer" class="x-button">
+        <span class="close">X</span>
+        <img id="img" src="images/norris-full.jpeg" alt="Large Image">
+        </div> 
     </div>
     <header>
         <h1>Cool Pics 📷</h1>
