blog assignment initial push

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <a href="week3/coolpics/index.html">Cool Pics</a>
         <a href="week4/coolpics/index.html">Cool Pics-Week 4</a>
         <a href="week5/blog/index.html">Blog</a>
+        <a href="./week6/">Week6</a>
     </nav>
     <footer></footer>
 </body>
