--- a/week6/blog-part2/blog.html
+++ b/week6/blog-part2/blog.html
@@ -29,16 +29,17 @@
         </nav>
     </header>
     <div class="container">
-        <div class="text">
-            <p>July 5, 2022</p>
-            <p>10-14</p>
-            <p>Fantasy</p>
-            <p>*  *  *  *</p>
+        <div class="one"></div>
+            <div class="text"></div>
+            <div class="book"></div>
         </div>
-        <div class="book">
-            <h3>Septimus Heap Book One: Magyk</h3>
-            <img src="images/book-title.png" alt="Book titled: Septimus Heap, book one, Magyk">
-            <p>If you enjoy stories about seventh sons of seventh sons and magyk this is the book for you. Read More...</p>
+        <div class="two">
+            <div class="text"></div>
+            <div class="book"></div>
+        </div>
+        <div class="three">
+            <div class="text"></div>
+            <div class="book"></div>
         </div>
         <div class="dropdown">
             <ul>
@@ -61,7 +62,6 @@
                         <option value="10-12">10-12</option>
                         <option value="12-14">12-14</option>
                         <option value="12-16">14-16</option>
-                        <option value="16-18">16-18</option>
                         <option value="adults">Adults</option>
                     </select>
                 </li>
@@ -69,13 +69,10 @@
                     <label for="genre">Genre</label>
                     <select id="genre" name="genra">
                         <option value=" "></option>
-                        <option value="history">History</option>
                         <option value="fantasy">Fantasy</option>
                         <option value="mystery">Mystery</option>
                         <option value="sci-fi">Sci Fi</option>
-                        <option value="non-fiction">Non-Fiction</option>
-                        <option value="biography">Biography</option>
-                        <option value="autobiography">Autobiography</option>
+                        <option value="biographyAutobiography">Biography/Autobiography</option>
                         <option value="romance">Romance</option>
                         <option value="other">Other</option>
                     </select>
@@ -100,3 +97,23 @@
     
 <!-- chat gpt link for questions ask on this assignment when I didn't know what to do
  https://chatgpt.com/share/670ffe10-e270-800b-b1e7-c83b6f20eaba -->
+
+ <!-- <div class="text"> -->
+    <!-- <p>July 5, 2022</p>
+    <p>10-14</p>
+    <p>Fantasy</p>
+    <p>*  *  *  *</p> -->
+<!-- </div> -->
+<!-- <div class="book"> -->
+    <!-- <h3>Septimus Heap Book One: Magyk</h3>
+    <img src="images/book-title.png" alt="Book titled: Septimus Heap, book one, Magyk">
+    <p>If you enjoy stories about seventh sons of seventh sons and magyk this is the book for you. Read More...</p> -->
+<!-- </div> -->
+<!-- <div class="text"> -->
+    <!-- book 2 -->
+<!-- </div> -->
+<!-- <div class="book"></div> -->
+<!-- <div clast="text"> -->
+    <!-- book 3 -->
+<!-- </div> -->
+<!-- <div class="book"></div> -->
