see if it will update without a 404 error

--- a/week6/blog-part2/index.html
+++ b/week6/blog-part2/index.html
@@ -59,3 +59,5 @@
  https://chatgpt.com/share/670ffe10-e270-800b-b1e7-c83b6f20eaba -->
 
  <!-- ChatGPT: https://chatgpt.com/share/671dbb4b-9b08-800b-918a-adf1520190f5 -->
+
+ <!-- notes -->
