--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <a href="week4/coolpics/index.html">Cool Pics-Week 4</a>
         <a href="week5/blog/index.html">Blog</a>
         <a href="week6/blog-part2/index.html">Week6</a>
+        <a href="week7/creditcard/index.html">CreditCard</a>
     </nav>
     <footer></footer>
 </body>
