--- a/week7/form-demo.html
+++ b/week7/form-demo.html
@@ -11,53 +11,64 @@
   <body>
     <header><h1>Checkout</h1></header>
     <main>
-        <form id="checkout-form" action="completed.html">
-            <label for="full-name">Full Name:</label>
-            <input type="text" id="full-name" name="full-name" required>
+      <form id="checkout-form" action="completed.html">
+        <label for="full-name">Full Name:</label>
+        <input type="text" id="full-name" name="fullName" required />
 
-            <label for="email">Email:</label>
-            <input type="text" id="email" name="email" required>
+        <label for="email">Email:</label>
+        <input type="text" id="email" name="email" required />
 
-            <label for="address">Address:</label>
-            <textarea type="address" id="address" name="address" rows="4" required></textarea>
+        <label for="address">Address:</label>
+        <textarea
+          type="address"
+          id="address"
+          name="address"
+          rows="4"
+          required
+        ></textarea>
 
-            <label for="payment-method">Select Payment Method</label>
-            <select id="select-payment-type" name="select-payment-type" placeholder="Select Payment Type" required>
-                <option value="">Select Payment Method</option>
-                <option value="credit-card">Credit Card</option>
-                <option value="paypal">PayPal</option>
-            </select>
+        <label for="select-payment-type">Select Payment Method</label>
+        <select
+          id="select-payment-type"
+          name="selectPaymentType"
+          placeholder="Select Payment Type"
+          required
+        >
+          <option value="">Select Payment Method</option>
+          <option value="credit-card">Credit Card</option>
+          <option value="paypal">PayPal</option>
+        </select>
 
-            <!-- container for credit card details -->
-             <p id="credit-card-number-container" class="hide">
-                <label for="credit-card-number">Credit Card Number:</label>
-                <input 
-                    type="text" 
-                    id="credit-card-number" 
-                    name="credit-card-number" 
-                    placeholder="Enter 16 digits" 
-                    pattern="[0-9]{16}" 
-                    title="Please enter the 16-digit card number."
-                    required
-                />
-            </p>
+        <!-- container for credit card details -->
+        <p id="credit-card-number-container" class="hide">
+          <label for="credit-card-number">Credit Card Number:</label>
+          <input
+            type="text"
+            id="credit-card-number"
+            name="creditCardNumber"
+            placeholder="Enter 16 digits"
+            pattern="[0-9]{16}"
+            title="Please enter the 16-digit card number."
+            required
+          />
+        </p>
 
-            <!-- container for paypal details -->
-            <p id="paypal-username-container" class="hide">
-                <label for="paypal">PayPal Username:</label>
-                <input
-                type="text" 
-                id="paypal-username" 
-                name="paypal-username" 
-                placeholder="Enter PayPal Username" 
-                required
-                />
-            </p>
+        <!-- container for paypal details -->
+        <p id="paypal-username-container" class="hide">
+          <label for="paypal-username">PayPal Username:</label>
+          <input
+            type="text"
+            id="paypal-username"
+            name="paypalUsername"
+            placeholder="Enter PayPal Username"
+            required
+          />
+        </p>
 
-            <button type="submit">Place Order</button>
-        </form>
+        <button type="submit">Place Order</button>
+      </form>
 
-        <section class="errors"></section>
+      <section class="errors"></section>
     </main>
   </body>
 </html>
