--- a/week7/creditcard/index.html
+++ b/week7/creditcard/index.html
@@ -30,7 +30,8 @@
                 type="text"
                 id="card-number"
                 name="cardNumber"
-                placeholder="1234-1234-1234-1234"
+                placeholder="Enter 16 digit card number"
+                pattern="[0-9]{16}"
               />
             </div>
           </div>
