--- a/week7/creditcard/index.html
+++ b/week7/creditcard/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -48,7 +50,7 @@
             </div>
 
             <div class="expiration-container">
-              <label for="expiration">EXPIRATION</label>
+              <label for="mm">EXPIRATION</label>
               <input 
               type="text" 
               id="mm" 
