cool pics 2 fixed register form working-initial push

--- a/week4/coolpics/index.html
+++ b/week4/coolpics/index.html
@@ -12,11 +12,11 @@
     <script src="coolpics.js" defer></script>
 </head>
 <body>
-    <div id="viewer" class="x-button">
+    <!-- <div id="viewer" class="x-button">
         <span class="close">X</span>
         <img id="img" src="images/norris-full.jpeg" alt="Large Image">
         </div> 
-    </div>
+    </div> -->
     <header>
         <h1>Cool Pics 📷</h1>
         <button id="menuButton">Menu</button>
