--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="week5/blog/index.html">Blog</a>
         <a href="week6/blog-part2/index.html">Week6</a>
         <a href="week7/creditcard/index.html">CreditCard</a>
+        <a href="week8/register/index.html">register</a>
     </nav>
     <footer></footer>
 </body>
