--- a/week7/creditcard/index.html
+++ b/week7/creditcard/index.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,90 +10,77 @@
     <script src="creditcard.js" defer></script>
   </head>
   <body>
-    <!-- <form> -->
-    <section class="card-container">
-      <form id="card-front-fomr" class="card-front">
-        <div class="total">
-          <p>TOTAL: $199</p>
-        </div>
-
-        <div class="card-img">
-          <img
-            class="card-image"
-            src="images/favicon-initials.png"
-            alt="My Initials"
-          />
-        </div>
-
-        <div class="input-line-one">
-          <div class="card-number">
-            <label for="card-number">CARD NUMBER</label>
-            <input
-              type="text"
-              id="card-number"
-              name="cardNumber"
-              placeholder="Enter 16 digit card number"
-              pattern="[0-9]{16}"
-              aria-label="Card Number"
-            />
+    <form>
+      <div class="card-container">
+        <div class="card-front">
+          <div class="total">
+            <p>TOTAL: $199</p>
           </div>
-        </div>
 
-        <div class="input-line-two">
-          <div class="card-holder">
-            <label for="card-holder">CARD HOLDER</label>
-            <input
-              type="text"
-              id="card-holder"
-              name="cardHolder"
-              placeholder="Jane Doe"
-              required
-              aria-label="Card Holder Name"
+          <div class="card-img">
+            <img
+              class="card-image"
+              src="images/favicon-initials.png"
+              alt="Initials"
             />
           </div>
 
-          <div class="expiration-container">
-            <label for="mm">EXPIRATION</label>
-            <input 
+          <div class="input-line-one">
+            <div class="card-number">
+              <label for="card-number">CARD NUMBER</label>
+              <input
+                type="text"
+                id="card-number"
+                name="cardNumber"
+                placeholder="Enter 16 digit card number"
+                pattern="[0-9]{16}"
+              />
+            </div>
+          </div>
+
+          <div class="input-line-two">
+            <div class="card-holder">
+              <label for="card-holder">CARD HOLDER</label>
+              <input
+                type="text"
+                id="card-holder"
+                name="cardHolder"
+                placeholder="Jane Doe"
+              />
+            </div>
+
+            <div class="expiration-container">
+              <label for="mm">EXPIRATION</label>
+              <input 
+              type="text" 
+              id="mm" 
+              name="mm" 
+              placeholder="MM" 
+              pattern="(0[1-9]|1[0-2])"
+              />
+              <input 
+              type="text" 
+              id="yy" 
+              name="yy" 
+              placeholder="YY" 
+              pattern="20(2[3-9]|30)" 
+              />
+            </div>
+          </div>
+        </div>
+        <div class="card-back">
+          <div class="black"></div>
+          <label for="cvc">CVC/CVV</label>
+          <input
             type="text" 
-            id="mm" 
-            name="mm" 
-            placeholder="MM" 
-            pattern="(0[1-9]|1[0-2])"
-            required
-            aria-label="Expiration Month"
+            id="cvc" 
+            name="cvc" 
+            placeholder="xxx" 
             />
-            <input 
-            type="text" 
-            id="yy" 
-            name="yy" 
-            placeholder="YY" 
-            pattern="20(2[3-9]|30)" 
-            required
-            aria-label="Expiration Year"
-            />
-          </div>
         </div>
-      </form>
-      <form id="card-back-form" class="card-back">
-        <div class="black"></div>
-        <label for="cvc">CVC/CVV</label>
-        <input
-          type="text" 
-          id="cvc" 
-          name="cvc" 
-          placeholder="xxx"
-          pattern="[0-9]{3,4}"
-          required
-          aria-label="CVC or CVV Code"  
-          />
-          <!-- Hidden submit button -->
-          <button type="submit" style="display: none;">Hidden Submit</button>
-      </form>
-      <!-- main submit button -->
-      <button type="submit" class="submit" onclick="submitForms()">Submit</button>
-    </section>
-    <!-- </form> -->
+        <button type="submit" class="submit">Submit</button>
+      </div>
+    </form>
   </body>
 </html>
 
