updated css on credit card assignment

--- a/week7/creditcard/index.html
+++ b/week7/creditcard/index.html
@@ -10,7 +10,7 @@
   <body>
     <!-- <form> -->
     <section class="card-container">
-      <form id="card-front-fomr" class="card-front">
+      <form id="card-front-form" class="card-front">
         <div class="total">
           <p>TOTAL: $199</p>
         </div>
