--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
         <a href="week1/mission/index.html">Week 1</a>
         <a href="week2/mission/index.html">Week 2</a>
         <a href="week3/coolpics/index.html">Cool Pics</a>
-        <a href="week4/coolpics/index.html">Cool Pics-Week 4</a>
+        <a href="week4/coolpics/index.html">Cool Pics 2</a>
         <a href="week5/blog/index.html">Blog</a>
         <a href="week6/blog-part2/index.html">Week6</a>
         <a href="week7/creditcard/index.html">CreditCard</a>
-        <a href="week8/register/index.html">register</a>
+        <a href="week8/register/index.html">Register</a>
+        <a href="./week9/recipes/index.html">Recipes</a>
     </nav>
     <footer></footer>
 </body>
