--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="week6/blog-part2/index.html">Week6</a>
         <a href="week7/creditcard/index.html">CreditCard</a>
         <a href="week8/register/index.html">Register</a>
-        <a href="./week9/recipes/index.html">Recipes</a>
+        <a href="week9/recipes/index.html">Recipes</a>
     </nav>
     <footer></footer>
 </body>
