added social media og tags and cheked lighthouse

--- a/week9/recipes/index.html
+++ b/week9/recipes/index.html
@@ -8,7 +8,14 @@
     <meta name="author" content="Chelsea Saunders">
     <link rel="stylesheet" href="recipes.css">
     <script src="main.js" type="module"></script>
-    <link
+
+    <!-- open graph (og) meta tags for social media sites -->
+    <meta property="og:title" content="Recipe Book">
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="This site shows a recipe for Apple Crisp">
+    <meta property="og:image" content="images/images/apple-crisp.jpg">
+    <meta property="og:url" content="https://chelsea-saunders.github.io/wdd131/week9/recipes/index.html">
+    <meta name="twitter:card" content="summary_large_image">
 </head>
 <body>
     <header>
