--- a/week9/recipes/index.html
+++ b/week9/recipes/index.html
@@ -22,7 +22,7 @@
         <img src="images/images/recipe-book.png" alt="Animated Recipe Book logo" class="logo">
         <h1 class="header-title">Recipe Book</h1>
     </header>
-    <body class="body">
+    <div class="body">
         <form action="/search" method="get" class="search">
             <input type="text" name="search" placeholder="Search..." aria-label="Search">
             <button type="submit">
@@ -38,7 +38,7 @@
                     <p class="dessert">dessert</p>
                 </div>
                 <h2>Apple Crisp</h2>
-                <span
+                <span>
                     class="rating"
                     role="img"
                     aria-label="Rating: 4 out of 5 stars"
@@ -52,7 +52,7 @@
                 <p class="description">This apple crisp recipe is a simple yet delicious fall dessert that's great served warm with vanilla ice cream.</p>
             </section>
         </div>
-    </body>
+    </div>
     <footer>
         <nav class="social">
             <!-- Social media icons provided under CC from https://www.iconfinder.com/AlfredoCreates  -->
