updated main html link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <a href="week7/creditcard/index.html">CreditCard</a>
         <a href="week8/register/index.html">Register</a>
         <a href="week9/recipes/index.html">Recipes</a>
-        <a href="./week 10/recipes/index.html">Recipes2</a>
+        <a href="week 10/recipes/index.html">Recipes2</a>
+        <a href="finale/site-plan.html">Site-Plan</a>
     </nav>
     <footer></footer>
 </body>
